[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pvdeg"
description = "Pvdeg is a python library that supports the calculation of degradation related parameters for photovoltaic (PV) modules."
authors = [{name = "Pvdeg Python Developers", email = "Michael.Kempe@nrel.gov"}]
maintainers = [{email = "Silvana.Ovaitt@nrel.gov"}]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "photovoltaic",
    "solar",
    "degradation",
    "analysis",
    "performance",
    "module",
    "PV",
]
dependencies = [
    "aiohttp==3.9.5",
    "numpy==1.26.4",
    "pvlib==0.10.3",
    "scipy<1.14.0",
    "NREL-rex",
    "cartopy",
    "dask[dataframe]",
    "dask-jobqueue",
    "bokeh",
    "h5netcdf",
    "h5py",
    "jupyterlab",
    "matplotlib",
    "netCDF4",
    "notebook",
    "numba",
    "openpyxl",
    "pandas",
    "photovoltaic",
    "python-dateutil",
    "pytz",
    "seaborn",
    "tables",
    "tqdm",
    "xarray",
    "pre-commit",
    "sympy",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "readthedocs-sphinx-search>=0.3.1,<0.4",
    "sphinx>=7.2.6,<8",
    "sphinx_rtd_theme>=2.0.0,<3",
    "sphinx-gallery",
    "nbsphinx",
    "sphinx_toggleprompt",
    "pydata_sphinx_theme",
]
test = [
    "pytest",
    "pytest-cov",
    "sympy",
]
books = [
    "jupyter-book",
]
all = [
    "pvdeg[docs,test,books]",
]

[project.entry-points.pvdeg]
console_scripts = "pvdeg.cli:cli"

[project.urls]
Homepage = "https://github.com/NREL/PVDegradationTools"
"Bug Tracker" = "https://github.com/NREL/PVDegradationTools/issues"
Documentation = "https://pvdegradationtools.readthedocs.io/"
"Source Code" = "https://github.com/NREL/PVDegradationTools"

[tool.setuptools.packages.find]
include = ["pvdeg"]

[tool.setuptools.package-data]
"pvdeg.data" = ["*.json"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-p no:warnings",
    "--verbose",
]
